--- a/public/assets/css/select.css
+++ b/public/assets/css/select.css
@@ -99,7 +99,9 @@
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);    
     min-width:278px;
-    display: none !important;    
+    display: none !important;  
+    max-height: 300px;
+    overflow-y: scroll;  
 }
 
 /* container of helper elements */
