--- a/public/assets/views/hmo/clients-partials/enrollee/claims.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/claims.html
@@ -9,7 +9,7 @@
 			<div uib-collapse="activities" class="panel-wrapper">
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-md-4">
+						<div class="col-md-3">
 							<div class="user-left">
 								<div class="center">
 									<div flow-init="{singleFile:true}" flow-name="obj.flow" flow-file-added="!!{png:1,gif:1,jpg:1,jpeg:1}[$file.getExtension()]">
@@ -72,7 +72,7 @@
 								</table>
 							</div>
 						</div>
-						<div class="col-md-8">
+						<div class="col-md-9">
 							<div class="row">
 								<div class="col-md-12">
 									<div class="panel panel-white">
@@ -93,10 +93,41 @@
 									<div class="panel panel-white">
 										<div class="panel-heading border-light">
 											<h4 class="panel-title text-bold">Health Information</h4>
-											<paneltool class="panel-tools" tool-collapse="tool-collapse" tool-refresh="load1" tool-dismiss="tool-dismiss"></paneltool>
+											<select name="month" id="" class="pull-right" style="margin-top: -18px" ng-if="enrolleeCtrl.enrolleeRecords.length > 0">
+												<option value="{}" ng-repeat="month in months">{{month}}</option>
+											</select>
 										</div>
 										<div uib-collapse="activities" class="panel-wrapper">
 											<div class="panel-body">
+												<h2 ng-if="enrolleeCtrl.enrolleeRecords.length < 1">This enrollee has no Medical Records yet</h2>
+												<table class="table table-striped table-hover" id="sample-table-3" ng-if="enrolleeCtrl.enrolleeRecords.length > 0">
+													<thead>
+														<tr>
+															<th class="hidden-xs center">Referral Code</th>
+															<th class="center">Hospital</th>
+															<th class="center">Treated For</th>
+															<th class="center">Month</th>
+															<th class="center">Start Date</th>
+															<th class="center">End Date</th>
+															<th class="center"> action</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr ng-repeat="record in enrolleeCtrl.enrolleeRecords" on-last-repeat ng-click="enrolleeCtrl.showFullRecord(record.id)" style="cursor: pointer;">
+															<td class="text-bold center">{{ record.referral_code }}</td>
+															<td class="center"> {{ record.hospital }}</td>
+															<td class="center">{{ record.disease }}</td>
+															<td class="center">{{ record.month }}</td>
+															<td class="center">{{ record.start_date }}</td>
+															<td class="center">{{ (record.end_date) ?  record.end_date : 'Ongoing'}}</td>
+															<td class="center">
+                                                            <div class="visible-md visible-lg hidden-sm hidden-xs">
+                                                                <a href="#" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Edit" ng-click="enrolleeCtrl.editMedicalRecord(record.id)"><i class="fa fa-pencil"></i></a>
+                                                                </a>
+                                                            </div>
+														</tr>
+													</tbody>
+												</table>
 
 											</div>
 										</div>
