--- a/public/assets/views/hmo/clients-partials/enrollee/enrollee-info.html
+++ b/public/assets/views/hmo/clients-partials/enrollee/enrollee-info.html
@@ -43,6 +43,12 @@
 								</td>
 							</tr>
 							<tr>
+								<td>Primary Health Provider:</td>
+								<td class="text-bold">
+									<a href="#">{{enrolleeCtrl.enrollee.primary_hospital}}</a>
+								</td>
+							</tr>
+							<tr>
 								<td>Email:</td>
 								<td class="text-bold">
 									{{enrolleeCtrl.enrollee.email}}
@@ -88,7 +94,7 @@
 		<div class="panel-heading border-light">
 			<h4 class="panel-title"><span class="text-bold">Enrollee Dependents</span>
 			</h4>
-			<a class="btn btn-wide btn-primary pull-right" ng-if="enrolleeCtrl.dependents.length == 0" href="#" style="margin-top:-25px"><i class="fa fa-plus"></i> Create Dependent</a>
+			<a class="btn btn-wide btn-primary pull-right" ng-click="addDependent(enrollee.enrollee_id)" href="#" style="margin-top:-25px"><i class="fa fa-plus"></i> Create Dependent</a>
 		</div>
 		<div class="panel-body">
 			<div class="col-sm-12">
@@ -107,7 +113,7 @@
 							<table class="table table-striped table-hover" id="sample-table-3">
 								<thead>
 									<tr>
-										<th class="hidden-xs">Image</th>
+										<th class="hidden-xs center">Image</th>
 										<th class="">Enrollee ID</th>
 										<th>Full Name</th>
 										<th>Email</th>
